Improving compile times. Android 8:57 minutes, Windows: 4:10 minutes

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/src/main/jniLibs/*/
 .workspace/
 VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/src/main/jniLibs/*/gdbserver
 VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/src/main/jniLibs/*/libc++_shared.so
+VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/src/main/jniLibs/*/libbindstonecommon.a
